--- a/Estilos/Estilos.css
+++ b/Estilos/Estilos.css
@@ -39,12 +39,10 @@ footer {
     background:#999;
 }
 #caja {
-    text-align: right;
+    text-align: left;
     border: 10px solid #000000;
-    background: #e65c00;
-    background: -webkit-linear-gradient(to bottom, #e65c00, #f9d423);
-    background: linear-gradient(to bottom, #e65c00, #f9d423);
-    height: 269px;
+    background-color:#B68D40;
+    height: 409px;
     width: 409px;
     padding: 64px 32px 32px;
     margin: auto;
