--- a/Estilos/Estilos.css
+++ b/Estilos/Estilos.css
@@ -1,17 +1,66 @@
 * {
   margin: 0;
   padding: 0;
+  outline: 0;
+  box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
-
-.header {
-  font-size: 30px;
+.menu {
+  background-color: #B68D40;
+  height: 75px;
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid white;
+  box-shadow: 5px 0 10px black;
 }
-
-.header {
-  background-color: #E8B4B8;
+.logo{
+  color: white;
+  font: 60px;
+  padding: 0 80px;
+  font-weight: bold;
 }
-
+.menu_items{
+  display: flex;
+  list-style: none;
+  margin-right: 30px;
+}
+.menu_items li{
+  border-radius: 3px;
+  margin: 0 5px;
+}
+.menu_items li a{
+  padding: 7px 13px;
+  text-decoration: none;
+  font-size: 18px;
+  display: block;
+  text-transform: uppercase;
+  color: #fff;
+}
+.menu_items li:hover, li.active {
+  background-color: #634204;
+  transition: .4s;
+}
+.btn_menu{
+  margin-right: 30px;
+  font-size: 25px;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+}
+ul.ver {
+  top: 65px;
+}
+@media screen and (max-width: 925px){
+  .logo{
+    font-size: 30px;
+    padding-left: 35px;
+  }
+  .menu_items li a{
+    font-size: 16px;
+  }
+}
 h1 {
   background-color: #B68D40;
   text-align: center;
@@ -39,13 +88,94 @@ li {
   font-size: 20px;
 }
 
-footer {
-  position: fixed;
-  left: 0px;
-  bottom: 0px;
-  height: 30px;
-  width: 100%;
-  background: #999;
+.footer-dark {
+  padding:50px 0;
+  color:#f0f9ff;
+  background-color:#634204;
+}
+
+.footer-dark h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.footer-dark ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
+}
+
+.footer-dark ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.6;
+}
+
+.footer-dark ul a:hover {
+  opacity:0.8;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item:not(.social) {
+    text-align:center;
+    padding-bottom:20px;
+  }
+}
+
+.footer-dark .item.text {
+  margin-bottom:36px;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item.text {
+    margin-bottom:0;
+  }
+}
+
+.footer-dark .item.text p {
+  opacity:0.6;
+  margin-bottom:0;
+}
+
+.footer-dark .item.social {
+  text-align:center;
+}
+
+@media (max-width:991px) {
+  .footer-dark .item.social {
+    text-align:center;
+    margin-top:20px;
+  }
+}
+
+.footer-dark .item.social > a {
+  font-size:20px;
+  width:36px;
+  height:36px;
+  line-height:36px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+  margin:0 8px;
+  color:#fff;
+  opacity:0.75;
+}
+
+.footer-dark .item.social > a:hover {
+  opacity:0.9;
+}
+
+.footer-dark .copyright {
+  text-align:center;
+  padding-top:24px;
+  opacity:0.3;
+  font-size:13px;
+  margin-bottom:0;
 }
 
 #caja {
@@ -62,12 +192,8 @@ footer {
   border-bottom-left-radius: 20px;
 }
 
-body {
-  padding: 20px;
-}
-
-h2 {
-  margin-bottom: 0.5em;
+body{
+  background-color: #EED6D3;
 }
 
 .FotosProductos {
@@ -79,6 +205,7 @@ h2 {
 
 .ListadoProductos {
   background-color: #B68D40;
+
 }
 
 .ContenedorProductos {
@@ -101,6 +228,7 @@ h2 {
   .banner {
     width: "40";
     height: "40";
+
   }
 
   .FotosProductos {
@@ -129,3 +257,86 @@ h2 {
 }
 
 /*# sourceMappingURL=Estilos.css.map */
+.main__carrito{
+  width: 100vw;
+  display: flex;
+  padding: 200px;
+  gap: 50px;
+  justify-content: space-evenly;
+}
+.main__carrito .carrito__productos{
+  width: 100vw -120px;
+  display: flex;
+  flex-direction: column;
+}
+
+.main__carrito .carrito__productos .productos__lista{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  gap: 30px;
+  padding: 5px;
+}
+
+.main__carrito .carrito__productos .productos__lista .lista__card{
+  gap: 30px;
+  width: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  padding: 10px 20px 10px 20px;
+}
+
+.main__carrito .carrito__productos .productos__lista .lista__card img{
+
+  width: 200px;
+  border-radius: 5px;
+}
+
+.main__carrito .carrito__productos .productos__lista .lista__card .card__data h2{
+  font-weight: bolder;
+  font-size: 1.875rem;
+}
+
+.main__carrito .carrito__fin{
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  height: max-content;
+  gap: 50px;
+  
+  justify-content: center;
+}
+
+.main__carrito .carrito__fin .fin__resumen{
+    width: auto;
+}
+
+.main__carrito .carrito__fin .fin__button{
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  justify-content: center;
+}
+
+.main__carrito .carrito__fin .fin__button h2{
+  font-weight: bolder;
+  margin: 0;
+}
+
+.main__carrito .carrito__fin .fin__button button{
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding: 10px 20px 10px 20px;
+  background-color: #66BB6A;
+}
+
+.main__carrito .carrito__fin .fin__button button p{
+  font-weight: bold;
+  margin: 0;
+  color: white;
+}
