--- a/Estilos/Estilos.css
+++ b/Estilos/Estilos.css
@@ -7,58 +7,88 @@
 }
 .menu {
   background-color: #B68D40;
-  height: 75px;
-  width: 100vw;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  height: 80px;
+  width: 100%;
   border-bottom: 1px solid white;
   box-shadow: 5px 0 10px black;
 }
 .logo{
   color: white;
-  font: 60px;
-  padding: 0 80px;
+  font: 90px;
+  padding: 14px 50px;
   font-weight: bold;
+  font-size: 30px;
+  height: 40px;
 }
-.menu_items{
-  display: flex;
-  list-style: none;
-  margin-right: 30px;
+.menu ul{
+  float: right;
+  margin-right: 20px;
 }
-.menu_items li{
-  border-radius: 3px;
+.menu ul li{
+  display: inline-block;
+  line-height: 80px;
   margin: 0 5px;
 }
-.menu_items li a{
-  padding: 7px 13px;
-  text-decoration: none;
+.menu ul li a{
+  color: #fff;
   font-size: 18px;
-  display: block;
+  padding: 7px 13px;
+  border-radius: 3px;
   text-transform: uppercase;
-  color: #fff;
+  text-decoration: none;
 }
-.menu_items li:hover, li.active {
+li a.active, li a:hover{
   background-color: #634204;
-  transition: .4s;
+  transition: .5s;
 }
-.btn_menu{
-  margin-right: 30px;
-  font-size: 25px;
+.checkbtn{
+  font-size: 30px;
   color: #fff;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
   cursor: pointer;
   display: none;
 }
-ul.ver {
-  top: 65px;
+#check{
+  display: none;
 }
-@media screen and (max-width: 925px){
+@media (max-width: 925px){
   .logo{
-    font-size: 30px;
-    padding-left: 35px;
+    padding-left: 20px;
   }
-  .menu_items li a{
+  .menu ul li a{
     font-size: 16px;
+  }
+}
+@media(max-width: 858px){
+  .checkbtn{
+    display: block;
+  }
+  .menu ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: gray;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+  }
+  .menu ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  .menu ul li a{
+    font-size: 20px;
+  }
+  .menu ul li a:hover, .menu ul li a.activeñ{
+    background: none;
+    color: red;
+  }
+  #check:checked ~ ul{
+    left: 0;
   }
 }
 h1 {
@@ -82,12 +112,6 @@ body {
 article {
   font-size: 30px;
 }
-
-li {
-  display: inline;
-  font-size: 20px;
-}
-
 .footer-dark {
   padding:50px 0;
   color:#f0f9ff;
@@ -177,12 +201,18 @@ li {
   font-size:13px;
   margin-bottom:0;
 }
-
+#caja__login{
+  justify-content: center;
+  justify-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 #caja {
-  text-align: left;
+  text-align: justify;
   border: 10px solid #000000;
   background-color: #B68D40;
-  height: 409px;
+  height: 34rem;
   width: 409px;
   padding: 64px 32px 32px;
   margin: auto;
@@ -195,14 +225,6 @@ li {
 body{
   background-color: #EED6D3;
 }
-
-.FotosProductos {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 1em;
-  background-color: #B68D40;
-}
-
 .ListadoProductos {
   background-color: #B68D40;
 
@@ -213,48 +235,44 @@ body{
   justify-items: center;
 }
 
-.banner {
-  background-color: black;
-  align-items: center;
-}
-
-.Darksideimg {
-  width: 1500px;
-  height: 300px;
-  content: center;
-}
-
-@media only screen and (max-width: 480px) {
-  .banner {
-    width: "40";
-    height: "40";
-
-  }
-
-  .FotosProductos {
+.FotosProductos {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 1em;
-    background-color: black;
+    gap: 6rem;
+    grid-auto-rows: 22rem;
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   }
-
-  img {
-    height: 100%;
+  .container__slider{
+  width: 1425px;
+  margin: auto;
+  height: 499px;
+  overflow: hidden;
+  }
+  .container__slider ul{
+    padding: 0;
+    display: flex;
     width: 100%;
-    object-fit: contain;
+
+    animation: slider 10s infinite;
+  }
+  .container__slider li{
+    width: 100%;
+    list-style: none;
+  }
+  .container__slider li img{
+    width: 1425px;
+    height: 499px;
+  }
+  @keyframes slider{
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+    
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
   }
 
-  .Darksideimg {
-    height: 320px;
-    width: 320px;
-  }
-
-  #caja {
-    width: auto;
-    height: auto;
-    text-align: center;
-  }
-}
 
 /*# sourceMappingURL=Estilos.css.map */
 .main__carrito{
