--- a/Estilos/Estilos.css
+++ b/Estilos/Estilos.css
@@ -66,10 +66,10 @@ li a.active, li a:hover{
     display: block;
   }
   .menu ul{
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100vh;
-    background-color: gray;
+    background-color: #B68D40;
     top: 80px;
     left: -100%;
     text-align: center;
@@ -83,9 +83,9 @@ li a.active, li a:hover{
   .menu ul li a{
     font-size: 20px;
   }
-  .menu ul li a:hover, .menu ul li a.activeñ{
+  .menu ul li a:hover, .menu ul li a.active{
     background: none;
-    color: red;
+    color: black;
   }
   #check:checked ~ ul{
     left: 0;
@@ -94,23 +94,8 @@ li a.active, li a:hover{
 h1 {
   background-color: #B68D40;
   text-align: center;
-}
-
-h2 {
-  font-size: 30px;
-  text-align: center;
-}
-
-h3 {
-  background-color: #EED6D3;
-}
-
-body {
-  background-color: #FBE7C6;
-}
-
-article {
-  font-size: 30px;
+  font-size: 40px;
+  color: white;
 }
 .footer-dark {
   padding:50px 0;
@@ -223,24 +208,17 @@ article {
 }
 
 body{
-  background-color: #EED6D3;
+  background-color: #B68D40;
 }
 .ListadoProductos {
   background-color: #B68D40;
 
 }
-
-.ContenedorProductos {
-  justify-content: space-evenly;
-  justify-items: center;
+.ListadoProductos h1{
+  color: white;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
-
-.FotosProductos {
-    display: grid;
-    gap: 6rem;
-    grid-auto-rows: 22rem;
-    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-  }
   .container__slider{
   width: 1425px;
   margin: auto;
@@ -272,7 +250,36 @@ body{
     50% {margin-left: -200%;}
     70% {margin-left: -200%;}
   }
-
+  @media (max-width: 1400px){
+    .container__slider{
+      width: 100%;
+      margin: auto;
+      height: 25%;
+      }
+      .container__slider ul{
+        padding: 0;
+        display: flex;
+        width: 100%;
+      }
+      .container__slider li{
+        width: 100%;
+        list-style: none;
+        }
+    .container__slider li img{
+      width: 79rem;
+      height: 30rem;
+    }
+    @keyframes slider{
+      0% {margin-left: 0;}
+      20% {margin-left: 0;}
+      
+      25% {margin-left: -100%;}
+      45% {margin-left: -100%;}
+  
+      50% {margin-left: -200%;}
+      70% {margin-left: -200%;}
+    }
+  }
 
 /*# sourceMappingURL=Estilos.css.map */
 .main__carrito{
@@ -357,4 +364,146 @@ body{
   font-weight: bold;
   margin: 0;
   color: white;
+}
+.ayuda{
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container__acordion{
+  width: 100%;
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
+.acordion__item{
+  background-color: #B68D40;
+  border-radius: .4rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  box-shadow: .5rem 2px .5rem rgba(0, 0, 0, .1);
+}
+.acordion_link{
+  font-size: 1.6rem;
+  color: white;
+  text-decoration: none;
+  background-color: #B68D40;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+.acordion_link i{
+  color: #e7d5ff;
+  padding: .5rem;
+}
+.acordion_link .remove{
+  display: none;
+}
+.respuesta{
+  max-height: 0;
+  overflow: hidden;
+  position: relative;
+  background-color: #B68D40;
+  transition: max-height 650ms;
+}
+.respuesta::before{
+  content: "";
+  position: absolute;
+  width: .6rem;
+  height: 90%;
+  background-color: #B68D40;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+.respuesta p{
+  font-size: 1.4rem;
+  color: #fff;
+  padding: 2rem;
+}
+.acordion__item:target .respuesta{
+  max-height: 20rem;
+}
+.acordion__item:target .acordion_link .add{
+  display: none;
+}
+.acordion__item:target .acordion_link .remove{
+  display: block;
+}
+.Caja__preguntas{
+  font-size: 1.6rem;
+  text-decoration: none;
+  background-color: #B68D40;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  padding: 1rem 0;
+}
+.ContenedorProductos {
+  justify-content: space-evenly;
+  justify-items: center;
+}
+.FotosProductos {
+  display:grid;
+  gap: 6rem;
+  grid-auto-rows: 22rem;
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  }
+
+.contenedor__fotos figure{
+  position: relative;
+  height: 300px;
+  width: 300px;
+  overflow: hidden;
+  border-radius: 6px;
+  box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
+  cursor: pointer;
+}
+.contenedor__fotos figure img{
+  width: 100%;
+  height: 100%;
+  transition: all 500ms ease-out;
+}
+.contenedor__fotos figure .capa{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 49, 49, 0.89);
+  opacity: 0;
+  visibility: hidden;
+  text-align: center;
+}
+.contenedor__fotos figure:hover > .capa{
+  opacity: 1;
+  visibility: visible;
+}
+.contenedor__fotos figure:hover > .capa h3{
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+.contenedor__fotos figure:hover > .capa h4{
+  color: #fff;
+}
+.contenedor__fotos figure:hover > img{
+  transform: scale(1.3);
+}
+.contenedor__fotos figure .capa h3{
+  color: #fff;
+  font-weight: 400;
+  margin-bottom: 120px;
+  transition: all 500ms ease-out;
+  margin-top: 30px;
+}
+.texto__imagenes {
+  color: #fff;
+}
+.titulo__roto{
+  visibility: hidden;
 }
