--- a/Estilos/Estilos.css
+++ b/Estilos/Estilos.css
@@ -66,7 +66,7 @@ li a.active, li a:hover{
     display: block;
   }
   .menu ul{
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100vh;
     background-color: #B68D40;
